--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,14 +4,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hey there , how are u this is the notebook i made for revision of some important topics "
+    "hey there , how are u this is the notebook i made for revision of some important topics \n",
+    "this is where we're gonnna learn pandas . "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "this is where we're gonnna learn pandas . "
+    "\n",
+    "from collections import defaultdict\n",
+    "import math as m\n",
+    "from typing import Counter, DefaultDict, OrderedDict\n",
+    "import itertools as shit\n",
+    "from itertools import permutations\n",
+    "import operator\n",
+    "# ? ......................USED functiona........................................................\n",
+    "\n",
+    "\n",
+    "def assasin_for_e6(x):\n",
+    "    '''this is so we can get a concise list of all the prime factors of the no in a list\n",
+    "    easy to follow , we get all the prime nos lesser than the no .\n",
+    "    so basically helping us to get , the primes. \n",
+    "    10 ---> [2,5]\n",
+    "    11---> [11] because its a prime \n",
+    "    20 ---> [2,5]\n",
+    "    25 ---> [5,5]\n",
+    "    etc.\n",
+    "    '''\n",
+    "    assasin_list = [2, 3, 5, 7, 11, 13, 17, 19]\n",
+    "    l = []\n",
+    "    if x in assasin_list:\n",
+    "        l.append(x)\n",
+    "        return l\n",
+    "    i = 0\n",
+    "    while x != 1:\n",
+    "        if x % assasin_list[i] == 0:\n",
+    "            l.append(assasin_list[i])\n",
+    "            x = x/assasin_list[i]\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    return l\n",
+    "\n",
+    "\n",
+    "def assak(stin):\n",
+    "    '''this is the palindromic way and this is the way . to find the palindrome'''\n",
+    "    mid = len(stin)//2\n",
+    "    if len(stin) % 2 != 0:\n",
+    "        a = list(stin)\n",
+    "        a.pop(mid)\n",
+    "        stin2 = \"\".join(a)\n",
+    "        return assak(stin2)\n",
+    "    if len(stin) % 2 == 0 and stin[:mid] == stin[mid:][::-1]:\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def asterisk(stin: str) -> str:\n",
+    "    '''  aaaaaa  , aaaaa'''\n",
+    "    stin2 = \"|\".join(stin)\n",
+    "    rank = defaultdict()\n",
+    "    for i in range(1, len(stin2)-2):\n",
+    "        print(stin2[i])\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# *..............................main Arcadia...................................................................\n",
+    "class project_euler:\n",
+    "    '''\n",
+    "    INTRODUCTION:\n",
+    "    practicing some of the most hardest coding and mathematical problems.\n",
+    "    copyleft by projecteuler.net \n",
+    "    please dont sue me , show them some love 🖤🖤🖤\n",
+    "    '''\n",
+    "    def e1() -> int:\n",
+    "        ''' to find the multiples of all nos between 3 and  5 in 1000\n",
+    "        '''\n",
+    "        a = sum(list(filter(lambda x: x % 3 == 0 and x %\n",
+    "                5 == 0, [i for i in range(1000)])))\n",
+    "        return a\n",
+    "    def e2(x=1000) -> list[int]:\n",
+    "        '''\n",
+    "        [0,1,2,3,4,5,6,7,8,9,10]->[0,1,1,3,5,7,9,]\n",
+    "        to run a fibonnaci series  in one minuite , upto x steps  \n",
+    "        '''\n",
+    "        a = 0\n",
+    "        l = []\n",
+    "        for i in range(1, x+1):\n",
+    "            l.append(a)\n",
+    "            a = a+i\n",
+    "        l2 = list(filter(lambda x: x % 2 == 0, l))\n",
+    "        return l2\n",
+    "    def e3() -> int:\n",
+    "        '''\n",
+    "        TODO:\n",
+    "        to find the largest prime fraction of  600851475143\n",
+    "        concept -1 was n^2 , we can do 1 better \n",
+    "        every prime no u see is a factor of 6 +1 or +5 i found.\n",
+    "        which shrinks the problem to less than n also we need to go till \n",
+    "        n/2 because bigger than that cannot be a factor of the origional no \n",
+    "        '''\n",
+    "        ai = 600851475143\n",
+    "        # !error is coming here but what .\n",
+    "        no_we_need_biggest_of = m.ceil(m.sqrt(ai))\n",
+    "        def isprimo(x): return any([((x-i)/6).is_integer() for i in [1, 5]])\n",
+    "        l = []\n",
+    "            if ai % i == 0 and isprimo(i) and (i/25) % 25 != 0:\n",
+    "                l.append(i)\n",
+    "        # return print(l)\n",
+    "        for _ in l:\n",
+    "            if ai/_ == 1:\n",
+    "                return print(_)\n",
+    "            ai = ai/_\n",
+    "    def e6() -> list:\n",
+    "        '''\n",
+    "        TODO:\n",
+    "        2520 is the smallest number that can be\n",
+    "        divided by each of the numbers from 1 to 10 \n",
+    "        without any remainder.\n",
+    "        What is the smallest positive number that is evenly divisible \n",
+    "        by all of the numbers from 1 to 20? \n",
+    "        yeah it's lcm , of all 1 to 20 numbers . like this \n",
+    "        lcm(20,lcm(19,lcm(....)))\n",
+    "        which is just worst , \n",
+    "        i can iterate thru but i have a better approach . \n",
+    "        '''\n",
+    "        l = []\n",
+    "        for i in range(1, 21):\n",
+    "            r = []\n",
+    "            for j in assasin_for_e6(i):\n",
+    "                if j in l:\n",
+    "                    l.remove(j)\n",
+    "                else:\n",
+    "                    l.append(j)\n",
+    "        return [i for i in shit.accumulate(l, operator.mul)][-1]\n",
+    "\n",
+    "    def e5() -> str:\n",
+    "        '''TODO : \n",
+    "        A palindromic number reads the same both ways. \n",
+    "        The largest palindrome made from the product of two 2-digit numbers is \n",
+    "        9009 = 91 × 99.\n",
+    "        Find the largest palindrome made from the \n",
+    "        product of two 3-digit numbers.\n",
+    "        we could bruteforce this shit  .'''\n",
+    "        a = list(permutations(range(100, 999), 2))\n",
+    "        a.sort(key=lambda x: x[0]*x[1])\n",
+    "        a.sort(key=lambda x : x[0]*x[1])\n",
+    "        a = a[::-1]\n",
+    "        for i in a:\n",
+    "            done = str(i[0]*i[1])\n",
+    "            if assak(done):\n",
+    "                return done\n",
+    "    def e4():\n",
+    "        pass\n",
+    "    def e7():\n",
+    "        pass\n",
+    "    def e8():\n",
+    "        pass\n",
+    "    def e9():\n",
+    "        pass\n",
+    "    def e10():\n",
+    "        pass\n",
+    "    def e11():\n",
+    "        pass\n",
+    "    def e12():\n",
+    "    pass\n",
+    "\n",
+    "#! .................................trial  room..........................................\n",
+    "a = project_euler\n",
+    "asterisk(\"aaaaaa\")\n"
    ]
   },
   {
